Fixed cell alignment, incorrect cell flagging
Fixed cell alignment- cells are now properly on the grid
Added a toggle for cell flagging

--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,19 @@
     font-family: "Inter", sans-serif;
     font-size: min(3.5vw, 25px);
     text-align: center;
+
+    --switch-scale: 0.075em
 }
 
-.box .cell input {
+.box .cell {
     height: 2em;
     width: 2em;
 
-    border: 0px, solid;
+    border: 0px solid;
     text-align: center;
     font-family: "Inter", sans-serif;
     font-size: 1rem;
+    border-radius: 0;
 }
 
 .box {
@@ -64,3 +67,87 @@ input:read-only {
 textarea:focus, input:focus{
     outline: none;
 }
+
+.completed {
+    background-color: #dadada;
+}
+
+
+ /* https://www.w3schools.com/howto/howto_css_switch.asp */
+ /* The switch - the box around the slider */
+ .switch {
+    position: relative;
+    display: inline-block;
+    width: calc(30*var(--switch-scale));
+    height: calc(17*var(--switch-scale));
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .05s;
+    transition: .05s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: calc(13*var(--switch-scale));
+    width: calc(13*var(--switch-scale));
+    left: calc(2*var(--switch-scale));
+    bottom: calc(2*var(--switch-scale));
+    background-color: white;
+    -webkit-transition: .1s;
+    transition: .1s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(calc(13*var(--switch-scale)));
+    -ms-transform: translateX(calc(13*var(--switch-scale)));
+    transform: translateX(calc(13*var(--switch-scale)));
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: calc(17*var(--switch-scale));
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  } 
+
+
+/*https://stackoverflow.com/questions/2310734/how-to-make-html-text-unselectable*/
+  .unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  #settings {
+    margin: 0.2em;
+  }
